--- a/index.html
+++ b/index.html
@@ -79,8 +79,11 @@ SOFTWARE.
             /* .main-profile > img {margin-top:150px;} */
             .news > div, .main-profile > div {margin-top: 40px}
             .news > h1, .news > h2, .main-profile h1{text-align:center!important}
+            .news > h1 {font-size:16pt}
+            .news ol li h1 {font-size:10pt}
+            .news ol li p {font-size:10pt}
             .main-profile h2{text-align:center!important}
-            .main-profile > div > p{text-align:left!important}
+            .main-profile > div > p{text-align:left!important;font-size:11pt}
             .main-profile ul li p {display:none}
             .main-profile ul li {margin-left:0!important;margin-right:10px!important}
         }
