fix typo in index.html

--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@ SOFTWARE.
     </header>
 
     <div class="news wide-piece">
-        <h1>최근 소식들</h1>
+        <h1 class='eng'>NEWS</h1>
+        <h1 class='kor'>최근 소식들</h1>
         <ol>
             <li class="flex-block">
                 <h1>Jul 2022</h1>
