change some minor designs

--- a/personal.html
+++ b/personal.html
@@ -108,9 +108,8 @@ SOFTWARE.
     <div class='wider-piece personals'>
 	    <h1 class='eng'>About my name</h1>
 	    <ul>
-		    <li class='eng'>How to pronounce my name: <br><audio controls src="assets/jai-hyun.mp3">Your browser does not support the <code>audio</code> element.</audio></li>
-		    <li class='eng'>You can call me "Jay".</li>
-		    <li class='eng'>Calling me "Jai Hyun" would be perfect!</li>
+            <li class='eng'>You can call me "Jay".</li>
+		    <li class='eng'>Calling me "Jai Hyun" would be perfect! How to pronounce "Jai Hyun": <br><audio controls src="assets/jai-hyun.mp3">Your browser does not support the <code>audio</code> element.</audio></li>
 	    </ul>
 
         <h1 class='eng'>About this page</h1>
