--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@ SOFTWARE.
     .papers > li{
         margin-bottom:30px;
         display: list-item;
-        margin-left:20px;
+        /*margin-left:20px;*/
     }
     .papers > li h1{
         font-family: 'noto-eng','noto-kor';
