fix some sentences

--- a/personal.html
+++ b/personal.html
@@ -117,9 +117,9 @@ SOFTWARE.
 	    <ul>
             <li class='eng'>I wrote this page by myself using html, css and javascript.</li>
             <li class='kor'>이 페이지는 html, css, 자바스크립트부터 직접 코딩했습니다.</li>
-            <li class='eng'>The code in my <a href='https://github.com/jaihyunp/jaihyunp.github.io/'>github repo</a>.</li>
+            <li class='eng'>The codes are in my <a href='https://github.com/jaihyunp/jaihyunp.github.io/'>github repo</a>.</li>
             <li class='kor'>코드는 제 <a href='https://github.com/jaihyunp/jaihyunp.github.io/'>깃헙 레포</a>에서 볼 수 있어요.</li>
-            <li class='eng'>You can see my previous page in <a href='v1/index.html?lang=eng'>here</a>.</li>
+            <li class='eng'>You can see the previous version of my page in <a href='v1/index.html?lang=eng'>here</a>.</li>
             <li class='kor'>이 페이지의 이전 버전도 <a href='v1/index.html?lang=eng'>여기서</a> 확인해보세요.</li>
 	    </ul>
 
