make the words bolder

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@ SOFTWARE.
         .social img {width:22px;height:22px}
         .social p {display:inline;margin:auto 5px;font-family:'noto-eng-i','noto-kor-i';font-size:9.5pt;text-align:left;color:black;margin-bottom:0px!important}
 
-        .bio {font-family:'noto-eng-ii','noto-kor-ii';font-size:12pt;color:black;text-align:left!important;margin-top:20px;margin-bottom: 5px}
+        .bio {font-family:'noto-eng-i','noto-kor-i';font-size:12pt;color:black;text-align:left!important;margin-top:20px;margin-bottom: 5px}
 
         .news, .topics{position:relative;z-index:20;margin:auto;margin-bottom:70px}
         .news *, .topics *{position:relative!important}
         .news > h1, .topics > h1{font-family:'noto-eng-b','noto-kor-b';font-size:20pt;color:indianred;}
         .news ol, .topics ol {margin-top:15px}
         .news ol li, .topics ol li {list-style-type:none;margin-top:10px;padding-bottom:5px}
-        .news ol li p, .topics ol li p {font-family:'noto-eng-ii','noto-kor-ii';font-size:12pt;color:black;margin:auto;text-align:left!important}
+        .news ol li p, .topics ol li p {font-family:'noto-eng-i','noto-kor-i';font-size:12pt;color:black;margin:auto;text-align:left!important}
         .news ol li a, .topics ol li a {font-style:italic;}
 
         .news ol li h1 {min-width:90px;font-family:'noto-eng-i','noto-kor-i';font-size:12pt;color:black;margin:0px;margin-bottom:auto;text-align:left!important}
