--- a/personal.html
+++ b/personal.html
@@ -56,7 +56,7 @@ SOFTWARE.
 
 	.personals > ul{margin-left: 20px;margin-bottom: 40px}
 	.personals h1 {font-family: 'noto-eng-i', 'noto-kor-i'; font-size: 14pt; margin-bottom: 5px}
-	.personals li, .personals p{font-family: 'noto-eng-ii', 'noto-kor-ii'; font-size: 12pt;margin-bottom: 10px}
+	.personals li, .personals p{font-family: 'noto-eng-i', 'noto-kor-i'; font-size: 12pt;margin-bottom: 10px}
 	.personals audio{height: 25px}
 </style>
 </head>
