--- a/publications.html
+++ b/publications.html
@@ -66,7 +66,7 @@ SOFTWARE.
         /*margin-bottom:5px;*/
     }
     .papers > li p{
-        font-family: 'noto-eng-ii','noto-kor-ii';
+        font-family: 'noto-eng-i','noto-kor-i';
         font-size: 11pt;
     }
     .papers .links{
