--- a/talks.html
+++ b/talks.html
@@ -69,7 +69,7 @@ SOFTWARE.
     }
     .talks > li li{
         /*margin-left:15px;*/
-        font-family: 'noto-eng-ii','noto-kor-ii';
+        font-family: 'noto-eng-i','noto-kor-i';
         font-size: 11pt;
         text-indent: -10px;
         margin-left: 10px;
