update publications: add NAACL22 arxiv

--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,7 @@ SOFTWARE.
 
 <style>
     .papers{
-        /*list-style-type:decimal;list-style-position: outside;*/
+        /*list-style-type:decimal;list-style-position:outside;*/
         list-style-type: none;
     }
     .papers > li{
@@ -105,7 +105,7 @@ SOFTWARE.
                 <p class='eng'>By Garam Lee*, Minsoo Kim*, <u>Jai Hyun Park</u>*, <a href='https://seungwonh.github.io/'>Seung-won Hwang</a>, <a href='http://www.math.snu.ac.kr/~jhcheon/xe2/'>Jung Hee Cheon</a></p>
                 <p class='kor'>By 이가람*, 김민수*, <u>박재현</u>*, <a href='https://seungwonh.github.io/'>황승원</a>, <a href='http://www.math.snu.ac.kr/~jhcheon/xe2/'>천정희</a></p>
                 <p>In <a href='https://2022.naacl.org/'>NAACL 2022</a> (short)</p>
-                <p class='links'>[<a href='https://doi.org/10.18653/v1/2022.naacl-main.231'>paper</a>]</p>
+                <p class='links'>[<a href='https://doi.org/10.18653/v1/2022.naacl-main.231'>paper</a>] [<a href='https://arxiv.org/abs/2210.02574'>arxiv</a>]</p>
             </li>
             <li>
                 <h1>
