--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@ SOFTWARE.
         .news ol li p, .topics ol li p {font-family:'noto-eng-i','noto-kor-i';font-size:12pt;color:black;margin:auto;text-align:left!important}
         .news ol li a, .topics ol li a {font-style:italic;}
 
-        .news ol li h1 {min-width:90px;font-family:'noto-eng-i','noto-kor-i';font-size:12pt;color:black;margin:0px;margin-bottom:auto;text-align:left!important}
-        .news ol li p {margin-left:20px;}
+        .news ol li h1 {min-width:100px;font-family:'noto-eng-i','noto-kor-i';font-size:12pt;color:black;margin:0px;margin-bottom:auto;text-align:left!important}
+        .news ol li p {margin-left:20px}
 
         .topics > h1 {margin-bottom: 20px}
         .topics ol li{margin-bottom: 40px}
@@ -162,6 +162,18 @@ SOFTWARE.
         <h1 class='eng'>NEWS</h1>
         <h1 class='kor'>최근 소식들</h1>
         <ol>
+
+            <li class="flex-block">
+                <h1>Mar 2023</h1>
+                <p class='eng'>I will be participating as a staff in 6th <a href="homomorphicencryption.org">HES</a> meeting in Seoul! Also, I will be attending <a href="fhe.org">FHE.org</a> conference and <a href="">RWC 2023</a> in Tokyo.</p>
+                <p class='kor'>서울에서 열릴 6차 <a href="homomorphicencryption.org">HES</a> Meeting에서 스태프를 할 예정입니다. 도쿄에서 열릴 <a href="fhe.org">FHE.org</a> conference 와 <a href="">RWC 2023</a> 에 참여할 예정입니다!</p>
+            </li>
+            <li class="flex-block">
+                <h1>Jan 2023 <br>~ Feb 2023</h1>
+                <p class='eng'>I worked in <a href="https://cryptolab.co.kr">CryptoLab</a> as a research intern.</p>
+                <p class='kor'><a href="https://cryptolab.co.kr">크립토랩</a> 에서 연구인턴을 했습니다.</p>
+            </li>
+
             <li class="flex-block">
                 <h1>Jul 2022</h1>
                 <p class='eng'><b>The paper <a href="https://doi.org/10.1109/TIFS.2022.3188145">"Efficient Homomorphic Evaluation on Large Intervals"</a> was published in <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">IEEE Transactions on Information Forensics and Security</a>.</b></p>
