fix some minor issues on latest news

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@ SOFTWARE.
 
             <li class="flex-block">
                 <h1>Mar 2023</h1>
-                <p class='eng'>I will be participating as a staff in 6th <a href="homomorphicencryption.org">HES</a> meeting in Seoul! Also, I will be attending <a href="fhe.org">FHE.org</a> conference and <a href="">RWC 2023</a> in Tokyo.</p>
-                <p class='kor'>서울에서 열릴 6차 <a href="homomorphicencryption.org">HES</a> Meeting에서 스태프를 할 예정입니다. 도쿄에서 열릴 <a href="fhe.org">FHE.org</a> conference 와 <a href="">RWC 2023</a> 에 참여할 예정입니다!</p>
+                <p class='eng'>I was a staff in the 6th <a href="https://homomorphicencryption.org">HES</a> meeting in Seoul! Also, I attended <a href="https://fhe.org">FHE.org</a> conference and <a href="https://rwc.iacr.org/">RWC</a> 2023 in Tokyo.</p>
+                <p class='kor'>서울에서 열릴 6차 <a href="https://homomorphicencryption.org">HES</a> Meeting에서 스태프를 할 예정입니다. 도쿄에서 열릴 <a href="https://fhe.org">FHE.org</a> conference 와 <a href="https://rwc.iacr.org/">RWC</a> 2023 에 참여할 예정입니다!</p>
             </li>
             <li class="flex-block">
                 <h1>Jan 2023 <br>~ Feb 2023</h1>
@@ -205,10 +205,10 @@ SOFTWARE.
             <li class="flex-block">
                 <img src='assets/imgs/he.png'>
                 <div>
-                    <h1 class='eng'>Homomorphic Encryption</h1>
+                    <h1 class='eng'>(Fully) Homomorphic Encryption</h1>
                     <h1 class='kor'>동형암호</h1>
                     <p class='eng'>
-                        Encryption is a means to ensure data privacy. However, it is hard to use encrypted data without decrypting it. Homomorphic encryption (HE) can be a decent solution to this issue. HE is a form of encryption that allows computation in encrypted states without decryption. I am working on efficient evaluation algorithms using HE. I am also working on applications of HE in various fields, such as natural language processing and biological information.
+                        Encryption is a means to ensure data privacy. However, it is hard to use encrypted data without decrypting it. Homomorphic encryption (HE) can be a decent solution to this issue. HE is a form of encryption that allows computation in encrypted states without decryption. I am working on efficient evaluation algorithms using HE. I also work on HE applications in various fields, such as natural language processing and biological information.
                     </p>
                     <p class='kor'>
                         암호화는 데이터 프라이버시를 보장하는 수단입니다. 그러나 암호화된 데이터는 해독하지 않으면 활용하기 어렵습니다. 동형암호는 이 문제에 대한 훌륭한 해결책이 될 수 있습니다. 동형암호는 복호화 없이 암호화된 상태에서 계산을 허용하는 암호화 기법입니다. 저는 동형암호를 효율적으로 계산하는 알고리즘을 연구하고 있습니다. 또한 자연어 처리, 생물학적 정보 등 다양한 분야에서 동형암호의 활용도 연구하고 있습니다.
