--- a/personal.html
+++ b/personal.html
@@ -126,6 +126,8 @@ SOFTWARE.
         <h1 class='eng'>Also</h1>
         <h1 class='kor'>그리고</h1>
         <ul>
+            <li class='eng'>I play <a href='https://www.instagram.com/jaihyun_piano/'>piano</a> for fun!</li>
+            <li class='kor'>저는 <a href='https://www.instagram.com/jaihyun_piano/'>피아노</a>를 칩니다!</li>
             <li class='eng'>I play chess on <a href='https://lichess.org/jhyunp/'>lichess</a>!</li>
             <li class='kor'>저는 <a href='https://lichess.org/jhyunp/'>lichess</a>에서 체스를 둡니다!</li>
             <li class='eng'>From '16-'18, I served in the Republic of Korea Army.</li>
