update cv and news

--- a/index.html
+++ b/index.html
@@ -162,37 +162,46 @@ SOFTWARE.
         <h1 class='eng'>NEWS</h1>
         <h1 class='kor'>최근 소식들</h1>
         <ol>
+            <li class="flex-block">
+                <h1>May 2023</h1>
+                <p class='eng'>The paper entitled "HERMES: Efficient Ring Packing using MLWE Ciphertexts and Application to Transciphering" is accepted to <a href="https://crypto.iacr.org/2023/">Crypto 2023</a>.</p>
+                <p class='kor'>논문 "HERMES: Efficient Ring Packing using MLWE Ciphertexts and Application to Transciphering" 가 <a href="https://crypto.iacr.org/2023/">Crypto 2023</a> 에서 발표될 예정입니다.</p>
+            </li>
 
             <li class="flex-block">
                 <h1>Mar 2023</h1>
                 <p class='eng'>I was a staff in the 6th <a href="https://homomorphicencryption.org">HES</a> meeting in Seoul! Also, I attended <a href="https://fhe.org">FHE.org</a> conference and <a href="https://rwc.iacr.org/">RWC</a> 2023 in Tokyo.</p>
                 <p class='kor'>서울에서 열릴 6차 <a href="https://homomorphicencryption.org">HES</a> Meeting에서 스태프를 할 예정입니다. 도쿄에서 열릴 <a href="https://fhe.org">FHE.org</a> conference 와 <a href="https://rwc.iacr.org/">RWC</a> 2023 에 참여할 예정입니다!</p>
             </li>
+
             <li class="flex-block">
-                <h1>Jan 2023 <br>~ Feb 2023</h1>
-                <p class='eng'>I worked in <a href="https://cryptolab.co.kr">CryptoLab</a> as a research intern.</p>
-                <p class='kor'><a href="https://cryptolab.co.kr">크립토랩</a> 에서 연구인턴을 했습니다.</p>
+                <h1>Jan 2023</h1>
+                <p class='eng'>I worked in <a href="https://cryptolab.co.kr">CryptoLab Inc.</a> as a research intern from Jan 1st to Feb 28th.</p>
+                <p class='kor'>1~2 월에 <a href="https://cryptolab.co.kr">크립토랩</a> 에서 연구인턴을 했습니다.</p>
             </li>
 
             <li class="flex-block">
                 <h1>Jul 2022</h1>
-                <p class='eng'><b>The paper <a href="https://doi.org/10.1109/TIFS.2022.3188145">"Efficient Homomorphic Evaluation on Large Intervals"</a> was published in <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">IEEE Transactions on Information Forensics and Security</a>.</b></p>
-                <p class='kor'><b>논문 <a href="https://doi.org/10.1109/TIFS.2022.3188145">"Efficient Homomorphic Evaluation on Large Intervals"</a> 이 <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">IEEE Transactions on Information Forensics and Security</a> 에 게재됐습니다.</b></p>
+                <p class='eng'>The paper <a href="https://doi.org/10.1109/TIFS.2022.3188145">"Efficient Homomorphic Evaluation on Large Intervals"</a> was published in <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">IEEE Transactions on Information Forensics and Security</a>.</p>
+                <p class='kor'>논문 <a href="https://doi.org/10.1109/TIFS.2022.3188145">"Efficient Homomorphic Evaluation on Large Intervals"</a> 이 <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">IEEE Transactions on Information Forensics and Security</a> 에 게재됐습니다.</p>
             </li>
+
             <li class="flex-block">
                 <h1>Jul 2022</h1>
                 <p class='eng'>The paper <a href="https://aclanthology.org/2022.naacl-main.231/">"Privacy-Preserving Text Classification on BERT Embeddings with Homomorphic Encryption"</a> was presented at <a href="https://2022.naacl.org/">NAACL 2022</a>.</p>
                 <p class='kor'>논문 <a href="https://aclanthology.org/2022.naacl-main.231/">"Privacy-Preserving Text Classification on BERT Embeddings with Homomorphic Encryption"</a> 이 <a href="https://2022.naacl.org/">NAACL 2022</a> 에서 발표됐습니다.</p>
             </li>
-            <li class="flex-block">
+
+<!--             <li class="flex-block">
                 <h1>Apr 2022</h1>
                 <p class='eng'>The paper <a href="https://doi.org/10.1007/s10207-022-00590-x">"Efficient verifiable computation over quotient polynomial rings"</a> was published in <a href="https://www.springer.com/journal/10207">International Journal of Information Security</a>.</p>
                 <p class='kor'>논문 <a href="https://doi.org/10.1007/s10207-022-00590-x">"Efficient verifiable computation over quotient polynomial rings"</a> 이 <a href="https://www.springer.com/journal/10207">International Journal of Information Security</a> 에 게재됐습니다.</p>
             </li>
+
             <li class="flex-block">
                 <h1>Apr 2022</h1>
                 <p class='eng'>The paper <a href="https://doi.org/10.1186/s12864-022-08469-w">"Secure tumor classification by shallow neural network using homomorphic encryption"</a> was published in <a href="https://bmcgenomics.biomedcentral.com">BMC Genomics</a>.</p>
-                <p class='kor'>논문 <a href="https://doi.org/10.1186/s12864-022-08469-w">"Secure tumor classification by shallow neural network using homomorphic encryption"</a> 이 <a href="https://bmcgenomics.biomedcentral.com">BMC Genomics</a> 에 게재됐습니다.</p>
+                <p class='kor'>논문 <a href="https://doi.org/10.1186/s12864-022-08469-w">"Secure tumor classification by shallow neural network using homomorphic encryption"</a> 이 <a href="https://bmcgenomics.biomedcentral.com">BMC Genomics</a> 에 게재됐습니다.</p> -->
             </li>
         </ol>
     </div>
