add some hermes tjhings

--- a/index.html
+++ b/index.html
@@ -164,14 +164,14 @@ SOFTWARE.
         <ol>
             <li class="flex-block">
                 <h1>May 2023</h1>
-                <p class='eng'>The paper entitled "HERMES: Efficient Ring Packing using MLWE Ciphertexts and Application to Transciphering" is accepted to <a href="https://crypto.iacr.org/2023/">Crypto 2023</a>.</p>
-                <p class='kor'>논문 "HERMES: Efficient Ring Packing using MLWE Ciphertexts and Application to Transciphering" 가 <a href="https://crypto.iacr.org/2023/">Crypto 2023</a> 에서 발표될 예정입니다.</p>
+                <p class='eng'>The paper entitled "HERMES: Efficient Ring Packing using MLWE Ciphertexts and Application to Transciphering" is accepted to <a href="https://crypto.iacr.org/2023/">Crypto 2023</a>. I will be presenting the paper at there!</p>
+                <p class='kor'>논문 "HERMES: Efficient Ring Packing using MLWE Ciphertexts and Application to Transciphering" 를 <a href="https://crypto.iacr.org/2023/">Crypto 2023</a> 에서 발표할 예정입니다.</p>
             </li>
 
             <li class="flex-block">
                 <h1>Mar 2023</h1>
-                <p class='eng'>I was a staff in the 6th <a href="https://homomorphicencryption.org">HES</a> meeting in Seoul! Also, I attended <a href="https://fhe.org">FHE.org</a> conference and <a href="https://rwc.iacr.org/">RWC</a> 2023 in Tokyo.</p>
-                <p class='kor'>서울에서 열릴 6차 <a href="https://homomorphicencryption.org">HES</a> Meeting에서 스태프를 할 예정입니다. 도쿄에서 열릴 <a href="https://fhe.org">FHE.org</a> conference 와 <a href="https://rwc.iacr.org/">RWC</a> 2023 에 참여할 예정입니다!</p>
+                <p class='eng'>I was a staff in the 6th <a href="https://homomorphicencryption.org">HES</a> meeting.
+                <p class='kor'>서울에서 6차 <a href="https://homomorphicencryption.org">HES</a> Meeting에서 스태프를 했습니다.</p>
             </li>
 
             <li class="flex-block">
