--- a/publications.html
+++ b/publications.html
@@ -84,6 +84,14 @@ SOFTWARE.
         <ol reversed class='papers'>
             <li class='equal'>
                 <h1>
+                    HERMES: Efficient Ring Packing using MLWE Ciphertexts and Application to Transciphering
+                </h1>
+                <p class='eng'>(α-β order) Youngjin Bae, <a href='http://www.math.snu.ac.kr/~jhcheon/xe2/'>Jung Hee Cheon</a>, Jaehyung Kim, <u>Jai Hyun Park</u>, <a href='http://perso.ens-lyon.fr/damien.stehle/'>Damien Stehlé</a></p>
+                <p class='kor'>(가나다순) By 김재형, <u>박재현</u>, 배영진, <a href='http://www.math.snu.ac.kr/~jhcheon/xe2/'>천정희</a>, <a href='http://perso.ens-lyon.fr/damien.stehle/'>Damien Stehlé</a></p>
+                <p>(To appear) In <a href='https://crypto.iacr.org/2023/'>CRYPTO 2023</a></p>
+            </li>
+            <li class='equal'>
+                <h1>
                     Efficient Homomorphic Evaluation on Large Intervals
                 </h1>
                 <p class='eng'>(α-β order) By <a href='http://www.math.snu.ac.kr/~jhcheon/xe2/'>Jung Hee Cheon</a>, Wootae Kim, <u>Jai Hyun Park</u></p>
