--- a/personal.html
+++ b/personal.html
@@ -45,7 +45,7 @@ SOFTWARE.
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- title -->
-    <title>Jai Hyun Park</title>
+    <title>Wonhee Cho</title>
     <link rel='stylesheet' href='css/style.css'></link>
     <link rel='shortcut icon' href='assets/icons/logo-fill.png' type='image/x-icon'></link>
 
@@ -74,15 +74,15 @@ SOFTWARE.
             <ul class='grid-3-1-ul'>
                 <li id='name'>
                     <h1 class='eng'>Name</h1>
-                    <p class='eng'>Park, Jai Hyun</p>
+                    <p class='eng'>Cho, Wonhee</p>
                     <h1 class='kor'>이름</h1>
-                    <p class='kor'>박 재현</p>
+                    <p class='kor'>조 원희</p>
                 </li>
                 <li id='hometown'>
                     <h1 class='eng'>Hometown</h1>
-                    <p class='eng'>Daejeon, Korea</p>
+                    <p class='eng'>Suwon, Korea</p>
                     <h1 class='kor'>출생지</h1>
-                    <p class='kor'>대전</p>
+                    <p class='kor'>수원</p>
                 </li>
                 <li id='residence'>
                     <h1 class='eng'>Residence</h1>
@@ -93,7 +93,7 @@ SOFTWARE.
                 <li class='update-birth'>
                     <h1 class='eng'>Age</h1>
                     <h1 class='kor'>나이</h1>
-                    <p>1994.9.21.</p>
+                    <p>1993.4.4.</p>
                 </li>
                 <li>
                     <h1 class='eng'>Affiliation</h1>
@@ -108,8 +108,8 @@ SOFTWARE.
     <div class='wider-piece personals'>
 	    <h1 class='eng'>About my name</h1>
 	    <ul>
-            <li class='eng'>You can call me "Jay".</li>
-		    <li class='eng'>Calling me "Jai Hyun" would be perfect! How to pronounce "Jai Hyun": <br><audio controls src="assets/jai-hyun.mp3">Your browser does not support the <code>audio</code> element.</audio></li>
+            <li class='eng'>You can call me "wony".</li>
+		    <li class='eng'>Calling me "Wonhee" would be perfect!</li>
 	    </ul>
 
         <h1 class='eng'>About this page</h1>
