--- a/default.html
+++ b/default.html
@@ -111,7 +111,7 @@ SOFTWARE.
     <footer id='footer'>
         <div class='_overlay' style='background-color: rgb(24,24,24)'></div>
         <div class='_footer-line'>
-            <h1>ⓒ 2019-2022 <a href='http://jaihyunp.github.io/'>JaiHyun Park</a>. All rights reserved.</h1>
+            <h1>Modified from <a href='http://jaihyunp.github.io/'>JaiHyun Park</a>. <br>ⓒ 2023 <a href='http://wony0404.github.io/'>Wonhee Cho</a>. All rights reserved.</h1>
             <p style='font-size:10pt;font-family:"noto-eng","noto-kor";margin-bottom:10px'><a href='mailto:jhyunp@snu.ac.kr'>jhyunp@snu.ac.kr</a></p>
             <p class='update-time'></p>
             <p class='current-version'></p>
