--- a/index.html
+++ b/index.html
@@ -1,38 +1,3 @@
-<!----------------------------------------------------------------------------
-|        _______       _    _                     _____                      |
-|       |__   __|   _ | |  | |                   |  __ \                     |
-|          | |     (_)| |__| |                   | |__) |         _          |
-|          | | __ _ _ |  __  |_   _ _   _ _ __   |  ___/__ _ _ __| | __      |
-|       _  | |/ _` | || |  | | | | | | | | `_ \  | |   / _` | '__| |/ /      |
-|      / |_| | (_| | || |  | | |_| | |_| | | | | | |  | (_| | |  |   <       |
-|      \____/ \__,_|_||_|  |_|\__  |\__,_|_| |_| |_|   \__,_|_|  |_|\_\      |
-|                            ,._/ /                                          |
-|      jhyunp@snu.ac.kr      \___/           https://jaihyunp.github.io      |
-|                                                                            |
------------------------------------------------------------------------------>
-<!----------------------------------------------------------------------------
-MIT License
-
-Copyright (c) 2019-2020 Jai Hyun Park
-
-Permission is hereby granted, free of charge, to any person obtaining a copy
-of this software and associated documentation files (the "Software"), to deal
-in the Software without restriction, including without limitation the rights
-to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:
-
-The above copyright notice and this permission notice shall be included in all
-copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-SOFTWARE.
------------------------------------------------------------------------------>
 
 
 <!DOCTYPE html>
@@ -47,7 +12,7 @@ SOFTWARE.
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- title -->
-    <title>Jai Hyun Park</title>
+    <title>Wonhee Cho</title>
     <link rel='stylesheet' href='css/style.css'></link>
     <link rel='shortcut icon' href='assets/icons/logo-fill.png' type='image/x-icon'></link>
 
@@ -112,16 +77,16 @@ SOFTWARE.
 
         <img src='assets/imgs/profile-picture.png'>
         <div>
-            <h1 class='kor'>박 재 현</h1>
-            <h1 class='eng'>Jai Hyun Park</h1>
+            <h1 class='kor'>조 원 희</h1>
+            <h1 class='eng'>Wonhee Cho</h1>
             
             <h2 class='kor'>석박통합과정 • 서울대학교 수리과학부</h2>
             <h2 class='eng'>Integrated PhD StudentㆍDepartment of Mathematical Sciences, Seoul National University</h2>
             <ul class='social'>
                 <li>
-                    <a href='mailto:jhyunp@snu.ac.kr'>
+                    <a href='mailto:wony0404@snu.ac.kr'>
                         <img src='assets/icons/logo-mail.png' />
-                        <p>jhyunp@snu.ac.kr</p>
+                        <p>wony0404@snu.ac.kr</p>
                     </a>
                 </li>
                 <li>
@@ -131,9 +96,15 @@ SOFTWARE.
                     </a>
                 </li>
                 <li>
-                    <a href='https://github.com/jaihyunp/'>
+                    <a href='https://github.com/wony0404/'>
                         <img src='assets/icons/GitHub-Mark-120px-plus.png' />
                         <p>Github</p>
+                    </a>
+                </li>
+                <li>
+                    <a href='https://scholar.google.com/citations?user=Xlc-kD0AAAAJ&hl=en'>
+                        <img src='assets/icons/logo-google-scholar.png' />
+                        <p>Google Scholar</p>
                     </a>
                 </li>
             </ul>
@@ -142,7 +113,7 @@ SOFTWARE.
                 Hi! I am an Integrated PhD student at <a href="https://en.snu.ac.kr">Seoul National University</a>, majoring in mathematical sciences.
                 My advisor is <a href='http://www.math.snu.ac.kr/~jhcheon/xe2/'>Prof. Jung Hee Cheon</a>.</br></br>
 
-                I work on cryptography, focusing on fully homomorphic encryption.</br></br>
+                I work on cryptography, focusing on fully homomorphic encryption, Cryptanalysis.</br></br>
 
                 I hold a Bachelor's degree from the Department of Mathematical Sciences at Seoul National University. Here is my 
                 <a href="assets/CV.pdf">Curriculum Vitae</a>.
