--- a/default.html
+++ b/default.html
@@ -75,8 +75,8 @@
     <footer id='footer'>
         <div class='_overlay' style='background-color: rgb(24,24,24)'></div>
         <div class='_footer-line'>
-            <h1> <br>ⓒ 2023 <a href='http://wony0404.github.io/'>Wonhee Cho</a>. Powered by <a href='http://jaihyunp.github.io/'>JaiHyun Park</a>. All rights reserved.</h1>
-            <p style='font-size:10pt;font-family:"noto-eng","noto-kor";margin-bottom:10px'><a href='mailto:jhyunp@snu.ac.kr'>jhyunp@snu.ac.kr</a></p>
+            <h1> <br>ⓒ 2023 <a href='http://wony0404.github.io/'>Wonhee Cho</a>. Powered by <a href='http://jaihyunp.github.io/'>JaiHyun Park</a>.</h1>
+            <p style='font-size:10pt;font-family:"noto-eng","noto-kor";margin-bottom:10px'><a href='mailto:wony0404@snu.ac.kr'>wony0404@snu.ac.kr</a></p>
             <p class='update-time'>July 11, 2023</p>
             <p class='current-version'></p>
         </div>
