--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 Hi! I am an Integrated PhD student at <a href="https://en.snu.ac.kr">Seoul National University</a>, majoring in mathematical sciences.
                 My advisor is <a href='http://www.math.snu.ac.kr/~jhcheon/xe2/'>Prof. Jung Hee Cheon</a>.</br></br>
 
-                I work on cryptography, focusing on fully homomorphic encryption, Cryptanalysis.</br></br>
+                I work on cryptography, focusing on fully homomorphic encryption, analyzing the security of various cryptographic primitives.</br></br>
 
                 I hold a Bachelor's degree from the Department of Mathematical Sciences at Seoul National University. Here is my 
                 <a href="assets/CV.pdf">Curriculum Vitae</a>.
@@ -121,7 +121,7 @@
             <p class='bio kor'>
                 안녕하세요, 저는 서울대학교 수리과학부 석박통합과정 재학 중입니다. <a href='http://www.math.snu.ac.kr/~jhcheon/xe2/'>천정희 교수님</a> 지도 하에 있습니다.</br></br>
 
-                현재 저는 암호를 연구 중입니다. 특히 동형암호에 관심이 있습니다.</br></br>
+                현재 저는 암호를 연구 중입니다. 특히 동형암호와 다양한 암호 기반문제들에 대한 안전성 분석에 관심이 있습니다.</br></br>
 
                 서울대학교 수리과학부에서 학부를 졸업했습니다. 제 <a href="assets/CV.pdf">이력서</a>입니다. 
             </p>
@@ -133,46 +133,22 @@
         <h1 class='eng'>NEWS</h1>
         <h1 class='kor'>최근 소식들</h1>
         <ol>
-            <li class="flex-block">
-                <h1>May 2023</h1>
-                <p class='eng'>The paper entitled "HERMES: Efficient Ring Packing using MLWE Ciphertexts and Application to Transciphering" is accepted to <a href="https://crypto.iacr.org/2023/">Crypto 2023</a>. I will be presenting the paper at there!</p>
-                <p class='kor'>논문 "HERMES: Efficient Ring Packing using MLWE Ciphertexts and Application to Transciphering" 를 <a href="https://crypto.iacr.org/2023/">Crypto 2023</a> 에서 발표할 예정입니다.</p>
-            </li>
-
-            <li class="flex-block">
+             <li class="flex-block">
                 <h1>Mar 2023</h1>
                 <p class='eng'>I was a staff in the 6th <a href="https://homomorphicencryption.org">HES</a> meeting.
                 <p class='kor'>서울에서 6차 <a href="https://homomorphicencryption.org">HES</a> Meeting에서 스태프를 했습니다.</p>
             </li>
-
+        
             <li class="flex-block">
-                <h1>Jan 2023</h1>
-                <p class='eng'>I worked in <a href="https://cryptolab.co.kr">CryptoLab Inc.</a> as a research intern from Jan 1st to Feb 28th.</p>
-                <p class='kor'>1~2 월에 <a href="https://cryptolab.co.kr">크립토랩</a> 에서 연구인턴을 했습니다.</p>
+                <h1>Dec 2022</h1>
+                <p class='eng'>The paper <a href="https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-022-08469-w">"Secure Tumor Classification by Shallow Neural Network Using Homomorphic Encryption"</a> was published in <a href="https://bmcmedgenomics.biomedcentral.com/">BMC Medical Genomics</a>. </p>
+                <p class='kor'>논문 <a href="https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-022-08469-w">"Secure Tumor Classification by Shallow Neural Network Using Homomorphic Encryption"</a> 이 <a href="https://bmcmedgenomics.biomedcentral.com/">BMC Medical Genomics</a>에 게재되었습니다. </p>
             </li>
 
             <li class="flex-block">
-                <h1>Jul 2022</h1>
-                <p class='eng'>The paper <a href="https://doi.org/10.1109/TIFS.2022.3188145">"Efficient Homomorphic Evaluation on Large Intervals"</a> was published in <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">IEEE Transactions on Information Forensics and Security</a>.</p>
-                <p class='kor'>논문 <a href="https://doi.org/10.1109/TIFS.2022.3188145">"Efficient Homomorphic Evaluation on Large Intervals"</a> 이 <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">IEEE Transactions on Information Forensics and Security</a> 에 게재됐습니다.</p>
-            </li>
-
-            <li class="flex-block">
-                <h1>Jul 2022</h1>
-                <p class='eng'>The paper <a href="https://aclanthology.org/2022.naacl-main.231/">"Privacy-Preserving Text Classification on BERT Embeddings with Homomorphic Encryption"</a> was presented at <a href="https://2022.naacl.org/">NAACL 2022</a>.</p>
-                <p class='kor'>논문 <a href="https://aclanthology.org/2022.naacl-main.231/">"Privacy-Preserving Text Classification on BERT Embeddings with Homomorphic Encryption"</a> 이 <a href="https://2022.naacl.org/">NAACL 2022</a> 에서 발표됐습니다.</p>
-            </li>
-
-<!--             <li class="flex-block">
-                <h1>Apr 2022</h1>
-                <p class='eng'>The paper <a href="https://doi.org/10.1007/s10207-022-00590-x">"Efficient verifiable computation over quotient polynomial rings"</a> was published in <a href="https://www.springer.com/journal/10207">International Journal of Information Security</a>.</p>
-                <p class='kor'>논문 <a href="https://doi.org/10.1007/s10207-022-00590-x">"Efficient verifiable computation over quotient polynomial rings"</a> 이 <a href="https://www.springer.com/journal/10207">International Journal of Information Security</a> 에 게재됐습니다.</p>
-            </li>
-
-            <li class="flex-block">
-                <h1>Apr 2022</h1>
-                <p class='eng'>The paper <a href="https://doi.org/10.1186/s12864-022-08469-w">"Secure tumor classification by shallow neural network using homomorphic encryption"</a> was published in <a href="https://bmcgenomics.biomedcentral.com">BMC Genomics</a>.</p>
-                <p class='kor'>논문 <a href="https://doi.org/10.1186/s12864-022-08469-w">"Secure tumor classification by shallow neural network using homomorphic encryption"</a> 이 <a href="https://bmcgenomics.biomedcentral.com">BMC Genomics</a> 에 게재됐습니다.</p> -->
+                <h1>Nov 2022</h1>
+                <p class='eng'>The paper <a href="https://dl.acm.org/doi/10.1145/3548606.3560696">"META-BTS: Bootstrapping Precision Beyond the Limit"</a> was presented at <a href="https://www.sigsac.org/ccs/CCS2022/">ACM CCS 2022</a>.</p>
+                <p class='kor'>논문 <a href="https://dl.acm.org/doi/10.1145/3548606.3560696">"META-BTS: Bootstrapping Precision Beyond the Limit"</a> 이 <a href="https://www.sigsac.org/ccs/CCS2022/">ACM CCS 2022</a> 에서 발표되었습니다.</p>
             </li>
         </ol>
     </div>
@@ -196,19 +172,6 @@
                 </div>
             </li>
 
-            <li class="flex-block">
-                <img src='assets/imgs/vc.png'>
-                <div>
-                    <h1 class='eng'>Verifiable Computation</h1>
-                    <h1 class='kor'>계산 검증</h1>
-                    <p class='eng'>
-                        How can we securely delegate computations? How can we convince that the computing server did the task sincerely? By using verifiable computation (VC) schemes, a computing server can generate proof of their computing, which guarantees the integrity of the computation. I am interested in various topics in VC, including combining VC with homomorphic encryption for secure outsourcing.
-                    </p>
-                    <p class='kor'>
-                        계산을 어떻게 안전하게 아웃소싱할 수 있을까요? 컴퓨팅 서버가 작업을 성실하게 수행했다고 어떻게 확인할까요? 계산검증 기법을 사용하면 서버가 계산의 성실히 수행했다는 증거를 생성할 수 있습니다. 저는 계산검증과 동형암호화를 결합하는 주제에 관심이 있습니다. 이를 통해 안전한 아웃소싱을 도달하고자 합니다. 그 외에도 계산 검증의 다양한 주제에 관심이 많습니다.
-                    </p>
-                </div>
-            </li>
 
             <li class="flex-block">
                 <img src='assets/imgs/lattice.png'>
