--- a/index.html
+++ b/index.html
@@ -164,25 +164,31 @@
                     <h1 class='eng'>(Fully) Homomorphic Encryption</h1>
                     <h1 class='kor'>동형암호</h1>
                     <p class='eng'>
-                        Encryption is a means to ensure data privacy. However, it is hard to use encrypted data without decrypting it. Homomorphic encryption (HE) can be a decent solution to this issue. HE is a form of encryption that allows computation in encrypted states without decryption. I am working on efficient evaluation algorithms using HE. I also work on HE applications in various fields, such as natural language processing and biological information.
                     </p>
                     <p class='kor'>
-                        암호화는 데이터 프라이버시를 보장하는 수단입니다. 그러나 암호화된 데이터는 해독하지 않으면 활용하기 어렵습니다. 동형암호는 이 문제에 대한 훌륭한 해결책이 될 수 있습니다. 동형암호는 복호화 없이 암호화된 상태에서 계산을 허용하는 암호화 기법입니다. 저는 동형암호를 효율적으로 계산하는 알고리즘을 연구하고 있습니다. 또한 자연어 처리, 생물학적 정보 등 다양한 분야에서 동형암호의 활용도 연구하고 있습니다.
+                    </p>
+                </div>
+            </li>
+            <li class="flex-block">
+                <img src='assets/imgs/he.png'>
+                <div>
+                    <h1 class='eng'>Privacy-Preserving Machine Learning</h1>
+                    <h1 class='kor'>개인정보 보호 기계학습</h1>
+                    <p class='eng'>
+                    </p>
+                    <p class='kor'>
                     </p>
                 </div>
             </li>
 
-
             <li class="flex-block">
                 <img src='assets/imgs/lattice.png'>
                 <div>
-                    <h1 class='eng'>Lattice-based Crypto</h1>
-                    <h1 class='kor'>격자 기반 암호</h1>
+                    <h1 class='eng'>Cryptanalysis</h1>
+                    <h1 class='kor'>암호 안전성 분석</h1>
                     <p class='eng'>
-                        Lattice-based cryptosystems prove their security based on cryptographic assumptions related to lattice problems. I am interested in lattice-based crypto, especially in fully homomorphic encryption and post-quantum cryptography based on lattice problems. 
                     </p>
                     <p class='kor'>
-                        격자 기반 암호 시스템은 격자 문제와 관련된 암호 가정을 기반으로 보안을 증명합니다. 저는 격자 기반 암호화에 관심이 많으며, 특히 동형암호 및 양자 후 암호화에서의 활용들에 관심이 있습니다.
                     </p>
                 </div>
             </li>
