--- a/personal.html
+++ b/personal.html
@@ -1,38 +1,3 @@
-<!----------------------------------------------------------------------------
-|        _______       _    _                     _____                      |
-|       |__   __|   _ | |  | |                   |  __ \                     |
-|          | |     (_)| |__| |                   | |__) |         _          |
-|          | | __ _ _ |  __  |_   _ _   _ _ __   |  ___/__ _ _ __| | __      |
-|       _  | |/ _` | || |  | | | | | | | | `_ \  | |   / _` | '__| |/ /      |
-|      / |_| | (_| | || |  | | |_| | |_| | | | | | |  | (_| | |  |   <       |
-|      \____/ \__,_|_||_|  |_|\__  |\__,_|_| |_| |_|   \__,_|_|  |_|\_\      |
-|                            ,._/ /                                          |
-|      jhyunp@snu.ac.kr      \___/           https://jaihyunp.github.io      |
-|                                                                            |
------------------------------------------------------------------------------>
-<!----------------------------------------------------------------------------
-MIT License
-
-Copyright (c) 2019-2022 Jai Hyun Park
-
-Permission is hereby granted, free of charge, to any person obtaining a copy
-of this software and associated documentation files (the "Software"), to deal
-in the Software without restriction, including without limitation the rights
-to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:
-
-The above copyright notice and this permission notice shall be included in all
-copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-SOFTWARE.
------------------------------------------------------------------------------>
 
 <!DOCTYPE html>
 <html lang="en" style='display:none'>
@@ -112,26 +77,30 @@ SOFTWARE.
 		    <li class='eng'>Calling me "Wonhee" would be perfect!</li>
 	    </ul>
 
-        <h1 class='eng'>About this page</h1>
-        <h1 class='kor'>이 페이지에 대해서</h1>
+        <h1 class='eng'>About me</h1>
+        <h1 class='kor'>나에 대해서</h1>
 	    <ul>
-            <li class='eng'>I wrote this page by myself using html, css and javascript.</li>
-            <li class='kor'>이 페이지는 html, css, 자바스크립트부터 직접 코딩했습니다.</li>
-            <li class='eng'>The codes are in my <a href='https://github.com/jaihyunp/jaihyunp.github.io/'>github repo</a>.</li>
-            <li class='kor'>코드는 제 <a href='https://github.com/jaihyunp/jaihyunp.github.io/'>깃헙 레포</a>에서 볼 수 있어요.</li>
-            <li class='eng'>You can see the previous version of my page in <a href='v1/index.html?lang=eng'>here</a>.</li>
-            <li class='kor'>이 페이지의 이전 버전도 <a href='v1/index.html?lang=eng'>여기서</a> 확인해보세요.</li>
+            <li class='eng'>From 2014 to 2015, I served as a mandatory military service.</li>
+            <li class='kor'>2014년부터 2015년까지 군복무하였습니다.</li>
+	    <li class='eng'>I hold a Bachelor's degree from the Department of Mathematical Sciences at Seoul National University on February, 2017 (2011 - 2017). </li>
+            <li class='kor'>서울대학교 수리과학부에서 학부를 졸업했습니다 (2011년 3월 - 2017년 2월). </li>
+            <li class='eng'>I graduated Gyeonggi Science High School on Feburary, 2011 (2009 - 2011).</li>
+            <li class='kor'>경기과학고등학교 27기 졸업생입니다 (2009년 3월 - 2011년 2월).</li>
 	    </ul>
 
-        <h1 class='eng'>Also</h1>
-        <h1 class='kor'>그리고</h1>
+        <h1 class='eng'>Teaching Assistant</h1>
+        <h1 class='kor'>조교 활동</h1>
         <ul>
-            <li class='eng'>I play <a href='https://www.instagram.com/jaihyun_piano/'>piano</a> for fun!</li>
-            <li class='kor'>저는 <a href='https://www.instagram.com/jaihyun_piano/'>피아노</a>를 칩니다!</li>
-            <li class='eng'>I play chess on <a href='https://lichess.org/jhyunp/'>lichess</a>!</li>
-            <li class='kor'>저는 <a href='https://lichess.org/jhyunp/'>lichess</a>에서 체스를 둡니다!</li>
-            <li class='eng'>From '16-'18, I served in the Republic of Korea Army.</li>
-            <li class='kor'>2016년부터 2018년까지 육군에 복무했습니다.</li>
+            <li class='eng'>2023: Honor Calculus Practice 1.</li>
+            <li class='kor'>2023: 고급수학연습 1.</li>
+            <li class='eng'>2022: Differential and Integral Calculus Practice 1.</li>
+            <li class='kor'>2022: 미적분학연습 1.</li>
+            <li class='eng'>2021: Differential and Integral Calculus Practice 1, Number Theory, Honor Calculus Practice 2.</li>
+            <li class='kor'>2021: 미적분학연습 1, 정수론, 고급수학연습 2.</li>
+            <li class='eng'>2020: Calculus Practice 1, Honor Calculus Practice 2, Calculus TA Seminar.</li>
+            <li class='kor'>2020: 수학연습 1, 고급수학연습 2, 미적분학연습조교세미나.</li>
+            <li class='eng'>From 2013 winter to 2014 summer, I worked as a <a href='https://en.wikipedia.org/wiki/Korean_Mathematical_Olympiad'>Korean Mathematical Olympiad (KMO)</a> Winter/Summer School TA.</li>
+            <li class='kor'>2013년 겨울부터 2014년 여름까지 <a href='https://namu.wiki/w/한국수학올림피아드'>한국수학올림피아드 (KMO)</a> 여름/겨울 계절학교 조교로 일했습니다.</li>
         </ul>
     </div>
 
